src/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Relationship_to_the_Applicant__c</fullName>
        <label>Relationship to the Applicant</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rent_Electronic_Sales__c</fullName>
        <formula>IF((Average_Monthly_Card_Sales__c  &lt;&gt; 0),Monthly_Rental__c /Average_Monthly_Card_Sales__c,0 )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rent/Electronic Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Requested_Loan_Term__c</fullName>
        <inlineHelpText>Requested Loan Term in Months (Days)</inlineHelpText>
        <label>Requested Loan Term</label>
        <picklist>
            <picklistValues>
                <fullName>03 (090 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04 (120 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05 (150 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06 (180 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07 (210 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08 (240 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09 (270 days)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12 (365 days)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Required_Documents_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Updated automatically by Kofax</inlineHelpText>
        <label>Required Documents Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Revised_Offer_Status__c</fullName>
        <label>Revised Offer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Signed_Application_Form_Received_Date__c</fullName>
        <label>Signed Application Form Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signed_Application_Form_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signed Application Form Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Test_date__c</fullName>
        <label>Test_date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Repayable_Daily__c</fullName>
        <formula>Principal_Daily_Repayment__c + Interest_Daily_Repayment__c</formula>
        <label>Total Amount Repayable (Daily)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount_Repayable_Weekly__c</fullName>
        <formula>Interest_Weekly_Repayment__c  +  Principal_Weekly_Repayment__c</formula>
        <label>Total Amount Repayable (Weekly)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Repayment__c</fullName>
        <label>Total Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VAT_Daily_Repayment__c</fullName>
        <formula>ROUND(Program_Product_ASO__r.VAT__c*Interest_Daily_Repayment__c,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VAT Daily Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunitiesUpdatedToday</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All Opportunities Updated Today</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>X0_My_Opportunities_Application</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.RECORDTYPE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>OPPORTUNITY.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Application_Singapore,Opportunity.Application_UK,Opportunity.Application_Philippines</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Application_Hong_Kong</value>
        </filters>
        <label>0 My Opportunities (Application)</label>
        <sharedTo>
            <roleAndSubordinatesInternal>Group</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Application_Hong_Kong</fullName>
        <active>true</active>
        <businessProcess>Application Process</businessProcess>
        <description>Hong Kong opportunities at the application stage</description>
        <label>Application Hong Kong</label>
    </recordTypes>
    <recordTypes>
        <fullName>Application_Philippines</fullName>
        <active>true</active>
        <businessProcess>Application Process</businessProcess>
        <description>Philippines opportunities at the application stage</description>
        <label>Application Philippines</label>
    </recordTypes>
    <recordTypes>
        <fullName>Application_Singapore</fullName>
        <active>true</active>
        <businessProcess>Application Process</businessProcess>
        <description>Singapore opportunities at the application stage</description>
        <label>Application Singapore</label>
    </recordTypes>
    <recordTypes>
        <fullName>Application_UK</fullName>
        <active>true</active>
        <businessProcess>Application Process</businessProcess>
        <description>UK opportunities at the application stage</description>
        <label>Application UK</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assessment_Hong_Kong</fullName>
        <active>false</active>
        <businessProcess>Assessment Process</businessProcess>
        <description>Hong Kong opportunities at the assessment stage</description>
        <label>Assessment Hong Kong</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assessment_Philippines</fullName>
        <active>false</active>
        <businessProcess>Assessment Process</businessProcess>
        <description>Philippines opportunities at the assessment stage</description>
        <label>Assessment Philippines</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assessment_Singapore</fullName>
        <active>false</active>
        <businessProcess>Assessment Process</businessProcess>
        <description>Singapore opportunities at the assessment stage</description>
        <label>Assessment Singapore</label>
    </recordTypes>
    <recordTypes>
        <fullName>Assessment_UK</fullName>
        <active>false</active>
        <businessProcess>Assessment Process</businessProcess>
        <description>UK opportunities at the assessment stage</description>
        <label>Assessment UK</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closing_Hong_Kong</fullName>
        <active>true</active>
        <businessProcess>Closing Process</businessProcess>
        <description>Hong Kong opportunities at the closing stage</description>
        <label>Closing Hong Kong</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closing_Philippines</fullName>
        <active>true</active>
        <businessProcess>Closing Process</businessProcess>
        <description>Philippines opportunities at the closing stage</description>
        <label>Closing Philippines</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closing_Singapore</fullName>
        <active>true</active>
        <businessProcess>Closing Process</businessProcess>
        <description>Singapore opportunities at the closing stage</description>
        <label>Closing Singapore</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closing_UK</fullName>
        <active>true</active>
        <businessProcess>Closing Process</businessProcess>
        <description>UK opportunities at the closing stage</description>
        <label>Closing UK</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disbursement_Hong_Kong</fullName>
        <active>true</active>
        <businessProcess>Outcome Process</businessProcess>
        <description>Record Type for Disbursement Hong Kong</description>
        <label>Disbursement Hong Kong</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disbursement_Philippines</fullName>
        <active>true</active>
        <businessProcess>Outcome Process</businessProcess>
        <description>Record Type for Disbursement Philippines</description>
        <label>Disbursement Philippines</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disbursement_Singapore</fullName>
        <active>true</active>
        <businessProcess>Outcome Process</businessProcess>
        <description>Record Type for Disbursement Singapore</description>
        <label>Disbursement Singapore</label>
    </recordTypes>
    <recordTypes>
        <fullName>Disbursement_UK</fullName>
        <active>true</active>
        <businessProcess>Outcome Process</businessProcess>
        <description>Record Type for Disbursement UK</description>
        <label>Disbursement UK</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outcome_Hong_Kong</fullName>
        <active>true</active>
        <businessProcess>Outcome Process</businessProcess>
        <description>This record type is for all Hong Kong opportunities that are at the outcome stage.</description>
        <label>Outcome Hong Kong</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outcome_Philippines</fullName>
        <active>true</active>
        <businessProcess>Outcome Process</businessProcess>
        <description>This record type is for all Philippines opportunities that are at the outcome stage.</description>
        <label>Outcome Philippines</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outcome_Singapore</fullName>
        <active>true</active>
        <businessProcess>Outcome Process</businessProcess>
        <description>This record type is for all Singapore opportunities that are at the outcome stage.</description>
        <label>Outcome Singapore</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outcome_UK</fullName>
        <active>true</active>
        <businessProcess>Outcome Process</businessProcess>
        <description>This record type is for all UK opportunities that are at the outcome stage.</description>
        <label>Outcome UK</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal_Hong_Kong</fullName>
        <active>true</active>
        <businessProcess>Application Process</businessProcess>
        <description>Renew an existing Hong Kong Opportunity</description>
        <label>Renewal Hong Kong</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal_Philippines</fullName>
        <active>true</active>
        <businessProcess>Application Process</businessProcess>
        <description>Renew an existing Philippines Opportunity</description>
        <label>Renewal Philippines</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal_Singapore</fullName>
        <active>true</active>
        <businessProcess>Application Process</businessProcess>
        <description>Renew an existing Singapore Opportunity</description>
        <label>Renewal Singapore</label>
    </recordTypes>
    <recordTypes>
        <fullName>Renewal_UK</fullName>
        <active>true</active>
        <businessProcess>Application Process</businessProcess>
        <description>Renew an existing UK Opportunity</description>
        <label>Renewal UK</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Requested_Loan_Amount_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Amount &gt; (if(isblank(Average_Monthly_Card_Sales__c), 0, Average_Monthly_Card_Sales__c) * Conditional_Approval_Multiplier__c)</errorConditionFormula>
        <errorMessage>Requested Loan Amount cannot be greater than Conditional Offer Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VR_01_Validate_Loan_Amount_Change</fullName>
        <active>true</active>
        <description>Loan can only be updated when stage is &quot;In Progress&quot; or &quot;Application Revised&quot;</description>
        <errorConditionFormula>AND(
NOT(ISPICKVAL(StageName,&apos;In Progress&apos;)),
NOT(ISPICKVAL(StageName,&apos;Application Revised&apos;)),
OR(ISCHANGED(Amount),ISCHANGED(Requested_Loan_Term__c)))</errorConditionFormula>
        <errorMessage>Loan can only be updated when stage is &quot;In Progress&quot; or  &quot;Application Revised&quot;</errorMessage>
    </validationRules>
</CustomObject>